[gd_scene load_steps=4 format=3 uid="uid://6hpc2yphd4t1"]

[ext_resource type="Script" path="res://team/stack_lid.gd" id="1_plp63"]
[ext_resource type="Texture2D" uid="uid://b1v1bfgfavl4c" path="res://unit/types/fighter/F100.svg" id="2_oogqx"]
[ext_resource type="Texture2D" uid="uid://dqerqlfmbvtg7" path="res://unit/types/tank/tank.svg" id="3_1dyy2"]

[node name="stack" type="Node2D"]
z_index = 1
script = ExtResource("1_plp63")

[node name="background" type="ColorRect" parent="."]
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="unit4" type="Sprite2D" parent="."]
position = Vector2(26, -24)
scale = Vector2(0.35, 0.35)
texture = ExtResource("2_oogqx")

[node name="unit3" type="Sprite2D" parent="."]
position = Vector2(26, 2.08165e-12)
scale = Vector2(0.35, 0.35)
texture = ExtResource("2_oogqx")

[node name="unit2" type="Sprite2D" parent="."]
position = Vector2(26, 24)
scale = Vector2(0.35, 0.35)
texture = ExtResource("3_1dyy2")

[node name="unit1" type="Sprite2D" parent="."]
position = Vector2(-16, 16)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_1dyy2")

[node name="unit_count" type="Label" parent="."]
offset_left = -33.0
offset_top = -44.0
offset_right = 7.0
offset_bottom = -2.0
theme_override_font_sizes/font_size = 30
text = "4"
vertical_alignment = 1
